# insurance-processing

./: .gitignore  README.md  Taskfile.yml  api.py  approach.md  main.py  pyproject.toml  test_api.py
results/DummyDeny/: claim 19 decision.json  results.csv  results.json
results/SimpleLLM/: claim 1 decision.json  claim 10 decision.json  claim 11 decision.json  claim 12 decision.json  claim 13 decision.json  claim 14 decision.json  claim 15 decision.json  claim 16 decision.json  claim 17 decision.json  claim 18 decision.json  claim 19 decision.json  claim 2 decision.json  claim 20 decision.json  claim 21 decision.json  claim 22 decision.json  claim 23 decision.json  claim 24 decision.json  claim 25 decision.json  claim 3 decision.json  claim 4 decision.json  claim 5 decision.json  claim 6 decision.json  claim 7 decision.json  claim 8 decision.json  claim 9 decision.json  results.csv  results.json
results/SimpleLLMAuth/: claim 1 decision.json  claim 10 decision.json  claim 11 decision.json  claim 12 decision.json  claim 13 decision.json  claim 14 decision.json  claim 15 decision.json  claim 16 decision.json  claim 17 decision.json  claim 18 decision.json  claim 19 decision.json  claim 2 decision.json  claim 20 decision.json  claim 21 decision.json  claim 22 decision.json  claim 24 decision.json  claim 25 decision.json  claim 3 decision.json  claim 4 decision.json  claim 5 decision.json  claim 6 decision.json  claim 7 decision.json  claim 8 decision.json  claim 9 decision.json  results.csv  results.json
results/SimpleLLMAuthOCR/: claim 1 decision.json  results.csv  (+24 more)
(+70 files in other folders)
