[project]
name = "insurance-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "openai>=2.8.0",
    "pandas>=2.3.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["claim_processing*"]

[dependency-groups]
dev = [
    "go-task-bin>=3.45.5",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "ruff>=0.14.5",
]
